# murmur-space-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
src/murmur_space_bot/: __init__.py  config.py  main.py
src/murmur_space_bot/adapters/: database.py
src/murmur_space_bot/adapters/telegram/: app.py  bot.py  formatting.py  todo_board.py  todo_handlers.py  user_handlers.py  user_sync.py
src/murmur_space_bot/adapters/telegram/common/: __init__.py  pinned_messages.py  reactions.py  time.py  topics.py  user_links.py
src/murmur_space_bot/adapters/telegram/menu/: __init__.py  router.py  views.py
src/murmur_space_bot/adapters/telegram/middleware/: __init__.py  user_sync.py
src/murmur_space_bot/adapters/telegram/shopping/: __init__.py  board.py  router.py  views.py
src/murmur_space_bot/adapters/telegram/todos/: __init__.py  board.py  router.py  views.py
src/murmur_space_bot/adapters/telegram/users/: __init__.py  router.py  views.py
src/murmur_space_bot/models/: __init__.py  base.py  shopping.py  todo.py  todo_board.py  user.py
src/murmur_space_bot/services/: confirmations.py  errors.py  shopping.py  shopping_board.py  todo_board.py  todos.py  users.py
tests/: conftest.py  test_formatting.py  test_handlers.py  test_private_menu.py  test_shopping.py  test_shopping_board.py  test_shopping_handlers.py  test_todo_board.py  test_todos.py  test_users.py
