[project]
name = "murmur-space-bot"
version = "0.1.0"
description = "Telegram user directory and shared todo bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20,<4",
    "aiosqlite>=0.21,<1",
    "sqlalchemy>=2.0,<3",
]

[project.scripts]
murmur-space-bot = "murmur_space_bot.main:run"

[dependency-groups]
dev = [
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.25,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/murmur_space_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

